# cathay-onboard

./: 01_rag_engine_vertex_ai_search.ipynb  02_adk_tutorial.ipynb  03_deploy.ipynb  04-evaluation.ipynb  ADK-A2A-MCP.md  AGENT_DOCUMENTATION_detail.md  EVA_ARCHITECTURE_DOCUMENTATION.md  README.md  TECHNICAL_PRESENTATION_DRAFT.md  deploy_agent_engine_simple.py  pyproject.toml  pyvenv.cfg  requirements.txt
eva-onboarding-concierge/: .env  ADK_DEPLOYMENT_GUIDE.md  agent.py  requirements.txt
eva-onboarding-concierge/sub_agents/: __init__.py  access_workflow_orchestrator.py  device_depot.py  hr_helper.py  id_master.py  meeting_maven.py
eva_onboarding_concierg2/: DEPLOYMENT_GUIDE.md  README.md  __init__.py  agent.py  deploy.py  pyproject.toml  setup.py
eva_onboarding_concierg2/access_workflow_orchestrator_agent/: __init__.py  agent.py
eva_onboarding_concierg2/deployment/: README.md  test_deployment.py
eva_onboarding_concierg2/device_depot_agent/: __init__.py  agent.py
eva_onboarding_concierg2/eva_orchestrator_agent/: agent.py
eva_onboarding_concierg2/hr_helper_agent/: agent.py
eva_onboarding_concierg2/id_master_agent/: __init__.py
eva_onboarding_concierg2/meeting_maven_agent/: __init__.py
eva_onboarding_concierge/: .env.example  AGENT_DOCUMENTATION.md  ARCHITECTURE_DIAGRAMS.md  DEPLOYMENT_OPTIMIZED.md  STRUCTURE_IMPROVEMENTS.md  UPGRADE_SUMMARY.md  __init__.py  agent.py  demo_adk.py  pyproject.toml  requirements.txt  test_agent_identification.py  test_eva_system.py  verify_deployment.py
eva_onboarding_concierge/access_workflow_orchestrator_agent/: agent.py
eva_onboarding_concierge/cloud_run_app/: .dockerignore  CLOUD_RUN_DEPLOYMENT.md  Dockerfile  README.md  app.py  demo_app.py  deploy_cloud_run.py  requirements.txt  simple_test.py  test_local.py
eva_onboarding_concierge/deployment/: deploy.py  deploy_optimized.py
eva_onboarding_concierge/device_depot_agent/: agent.py
eva_onboarding_concierge/eva_orchestrator_agent/: __init__.py  agent.py  prompt.py
eva_onboarding_concierge/hr_helper_agent/: __init__.py  agent.py
eva_onboarding_concierge/id_master_agent/: agent.py
eva_onboarding_concierge/meeting_maven_agent/: agent.py
eva_onboarding_concierge/shared_libraries/: __init__.py  config.py  constants.py
hackathon-template/: .env.example  README.md  pyproject.toml  requirements.txt
hackathon-template/agents/: __init__.py  deploy.sh
hackathon-template/agents/hotel_agent/: __init__.py  agent.py
internal-chatbot-agent/: .env.example  README.md  __init__.py  adk_app_test.py  agent.py  check_setup.py  deploy.py  requirements.txt
internal-chatbot-agent2/: __init__.py  agent.py  deploy.py  module_test.py  simple_test.py  test.py  workflow_diagram.md
mcp-coffee-local-server/: Dockerfile  README.md  pyproject.toml  test_agent.py
mcp-coffee-local-server/src/mcp_coffee_shop/: __init__.py  __main__.py  server.py
mcp-wiki-remote-server/: README.md  pyproject.toml  test_agent.py
mcp-wiki-remote-server/http-sse-mcp-starter/: client.py  pyproject.toml  requirements.txt  server.py
