[project]
name = "google-adk-workshop"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "google-adk>=1.0.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-aiplatform[adk,agent-engines,evaluation]>=1.92.0",
    "google-cloud-discoveryengine>=0.13.8",
    "google-genai>=1.13.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pytz>=2025.2",
    "rich>=14.0.0",
]
