[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eva-onboarding-concierge"
version = "1.0.0"
description = "Eva - Your AI Onboarding Concierge built with Google ADK"
authors = [
    {name = "Google ADK Team", email = "adk-team@google.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-aiplatform[agent_engines]>=1.93.1",
    "google-genai>=1.16.1",
    "pydantic>=2.10.6,<3.0.0",
    "python-dotenv>=1.0.1",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/google/adk"
Documentation = "https://github.com/google/adk/docs"
Repository = "https://github.com/google/adk"
Issues = "https://github.com/google/adk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["eva_onboarding_concierge*"]

[tool.setuptools.package-data]
"eva_onboarding_concierge.hr_helper_agent.data" = ["*.pdf"]

# ADK Configuration
[tool.adk]
agent_module = "eva_onboarding_concierge.agent"
agent_name = "agent"
description = "Eva - Your AI Onboarding Concierge"
version = "1.0.0"

[tool.adk.web]
title = "Eva Onboarding Concierge"
description = "AI-powered employee onboarding system"
port = 8080
host = "0.0.0.0"

[tool.adk.run]
interactive = true
verbose = true

# Python tooling configuration
[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
